html/css/main.css
/* ... */
.color-lime{
	color: var(--lime);
}
.color-yellow{
	color: var(--yellow);
}
.color-amber{
	color: var(--amber);
}
.color-orange{
	color: var(--orange);
}
.color-deep_orange{
	color: var(--deep_orange);
}
.color-brown{
	color: var(--brown);
}
.color-gray{
	color: var(--gray);
}
.color-black{
	color: var(--black);
}
.color-dark_gray{
	color:var(--dark_gray);
}

.color-lightgray{
	color:lightgray;
}

/*End colors */

.link-card {
	background-color: var(--method-background);
	width: 100%;
}

.link-card .dropdown-toggle::after {
	display: none !important;
}

.link-card .fa-ellipsis-v {
	cursor: pointer;
}

.link-card .text-muted {
	font-size: 0.9em;
}

.link-card a.text-muted {
	cursor: default;
}

.link-card p {
	font-size: 0.9em;
}

.link-card .link-run-trigger {
	cursor: pointer !important;
}

.cursor-pointer {
	cursor: pointer;
}

.settings-section{
	background-color: var(--method-background);
	color: var(--dark1);
	margin-bottom: 12px;
	border-radius: 8px;
	border: 1px solid #e9ecef;
	padding: 16px 20px !important;
}

/* Card footer divider line */
.imp-lib-card-footer {
	border-top: 1px solid #eee;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before
{
    background-color: var(--solid-button-background);
}
.custom-control-input:checked~.custom-control-label::before {
    color: var(--solid-button-font);
    background-color: var(--solid-button-background);
}

.custom-radio input, .custom-radio label, .custom-checkbox input, .custom-checkbox label{
	cursor:pointer;
}

.custom-control-input:disabled~.custom-control-label, .custom-control-input[disabled]~.custom-control-label{
	opacity:0.5!important;
}

.custom-control-input:focus ~  
          .custom-control-label::before {  
                border-color: var(--medium) !important; 
				box-shadow: 0 0 0 4px rgba(var(--medium-rgb),0.2) !important;
            } 
  

            .custom-control-input:checked ~  
          .custom-control-label::before { 
                border-color: var(--medium) !important; 
                background-color: var(--medium) !important; 
            } 
  

            .custom-control-input:active ~  
          .custom-control-label::before { 
                background-color: var(--medium) !important; 
                border-color: var(--medium) !important; 
            } 
  

            .custom-control-input:focus:not(:checked) ~ .custom-control-label::before { 
				border-color: var(--medium) !important; 
            } 


			/* Arrows to expand/collapse Settings > Links > Groups contents */
			[data-toggle="collapse"].collapsed .caret-right {
			  transform: rotate(0deg) ;
			  transition: all linear 0.25s;
			  }   

			[data-toggle="collapse"] .caret-right {
			  transform: rotate(90deg) ;
			  transition: all linear 0.25s;
			}

			.settings-links-method{
				border-bottom: 1px solid #f2f2f2;
				background-color: white;
				/* cursor: pointer; */
			}

			/* Protected / restricted groups in settings accordion */
			.settings-links-group.protected-group {
				opacity: 0.55;
				cursor: default;
			}
			.settings-links-group.protected-group .card-header {
				cursor: pointer;
			}

			.settings-links-method .name{
				line-height:16px !important;
				color: var(--medium2);
			}

			.settings-links-method .path{
				line-height:16px !important;
				color: silver;
				font-size: 0.8em;
			}
			.text-sm {
				font-size: 0.8em;
			}

			.text-xs {
				font-size: 0.6em;
			}
			div.clear-field{
				position:absolute;
				top:5px;
				left:-25px;
				cursor:pointer;
				color:rgba(var(--medium-rgb), 1);
			}

			span.clear-text{
				position:absolute;
				top:-36px;
				left: -23px;
				color:rgba(var(--medium-rgb), 1);
				cursor:pointer;
			}
			.relative00{
				position:relative;
				width:0;
				height:0;
			}
			.container-imageicon{
				cursor: pointer;
			}

			#editModal { z-index: 1060; }
			#editModal + .modal-backdrop { z-index: 1055; }
			#deleteModal { z-index: 1060; }
			#deleteModal + .modal-backdrop { z-index: 1055; }

			.editModal-icon:hover, .editModal-image:hover{
				opacity: 0.5;
			}
			.container-imageicon:hover{
				cursor: pointer;
				text-decoration: underline;
			}

			.callout-notch {
				position: absolute;
				top: 1px;
				left: -23px;
				margin: 0;
				border-top: 23px solid transparent;
				border-left:0;
				border-right: 23px solid #F8F8F8;
				border-bottom: 23px solid transparent;
				padding: 0;
				width: 0;
				height: 0;
			}
			.border-notch { 
				border-right-color: rgba(0,0,0,.125); 
				left: -24px;
			}
			.icon-container{
				width:100px;
			}
			.image-container{
				width:200px;
				text-align:center;
			}
			
			.color-circle{
				float:left;
				padding:3px;
				margin-top:2px;
				margin-bottom:2px;
				cursor:pointer;
				font-size:1.3em;
			}
			.color-circle:hover, .color-circle-active {
				border-radius:40px;
				border: 1px solid #fff;
				box-shadow: 0 0 0 2px red;
			}
			.icons-list{
				height:400px;
				overflow:auto;
			}
			.icons-list div:not(.clearfix){
				float:left;
				margin:2px;
				padding:5px;
				border:1px solid silver;
				width:50px;
				height:50px;
				line-height:50px;
				text-align: center;
				vertical-align: middle;
				color: #767779;
				cursor: pointer;
			}
			.icons-list div.icon-active,.icons-list div:not(.clearfix):hover {
				background-color: #495057;
				color:white;
			}

/* ---- Detail Modal ---- */
#detailModal .modal-backdrop {
	background: rgba(0, 0, 0, 0.3);
}

.detail-modal-content {
	border: none;
	border-radius: 12px;
	box-shadow: 0 8px 40px rgba(0, 0, 0, 0.25);
	overflow: hidden;
}

.detail-modal-header {
	background: var(--dark1);
	color: white;
	border-bottom: 3px solid var(--medium);
	padding: 20px 24px;
}

.detail-modal-header .close {
	color: white;
	opacity: 0.7;
	text-shadow: none;
}

.detail-modal-header .close:hover {
	opacity: 1;
}

.detail-modal-icon i {
	color: var(--medium);
}
/* ... */

